--- a/shop/package.json
+++ b/shop/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://lacey.dothome.co.kr/react",
   "name": "shop",
   "version": "0.1.0",
   "private": true,
@@ -6,9 +7,14 @@
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.26.1",
+    "node-sass": "^7.0.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
+    "react-transition-group": "^4.4.2",
+    "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
